--- a/phone/css/blog--mckinney-makes-media.css
+++ b/phone/css/blog--mckinney-makes-media.css
@@ -25,16 +25,625 @@
 
 html
 {
-	background-color: #7F7F7F;
+	background: #7F7F7F url("../../images/mmm-website-assets-bg.png") repeat-y center center scroll;
 }
 
 #page
 {
 	z-index: 1;
-	width: 0px;
-	min-height: 0px;
-	padding-right: 380px;
-	padding-bottom: 570px;
+	width: 380px;
+	min-height: 770.9984547865556px;
+	padding-bottom: 0px;
+}
+
+#pu2619
+{
+	width: 0.01px;
+	position: relative;
+}
+
+#u2619
+{
+	z-index: 2;
+	width: 380px;
+	margin-right: -10000px;
+}
+
+#u2621
+{
+	z-index: 4;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 82px;
+}
+
+#u2621:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2621:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2622
+{
+	z-index: 5;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 140px;
+}
+
+#u2621.MuseLinkActive,#u2622:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2622:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2623
+{
+	z-index: 6;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 198px;
+}
+
+#u2622.MuseLinkActive,#u2623:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2623:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2624
+{
+	z-index: 7;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 257px;
+}
+
+#u2623.MuseLinkActive,#u2624:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2624:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2625
+{
+	z-index: 8;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 315px;
+}
+
+#u2624.MuseLinkActive,#u2625:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2625:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2626
+{
+	z-index: 9;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 24px;
+}
+
+#u2625.MuseLinkActive,#u2626:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2626:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2626.MuseLinkActive
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#tab-panelu2987
+{
+	z-index: 20;
+	width: 505px;
+	margin-left: 18px;
+	margin-top: 24px;
+	position: relative;
+}
+
+#u2988
+{
+	z-index: 21;
+	width: 473px;
+	position: relative;
+}
+
+#u2993
+{
+	z-index: 22;
+	width: 164px;
+	min-height: 20px;
+	border-style: solid;
+	border-color: #999999;
+	background-color: #DEDEDE;
+	padding-bottom: 3px;
+	position: relative;
+	margin-right: -10000px;
+	border-width: 1px 0px 1px 1px;
+}
+
+#u2993:hover
+{
+	border-style: solid;
+	background-color: #FFFFFF;
+	width: 164px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+	border-width: 1px 0px 1px 1px;
+}
+
+#u2993.TabbedPanelsTabSelected
+{
+	border-style: solid;
+	background-color: #FFFFFF;
+	width: 164px;
+	min-height: 21px;
+	margin: 0px -10000px 0px 0px;
+	border-width: 1px 0px 0px 1px;
+}
+
+#u2996-4
+{
+	z-index: 23;
+	width: 164px;
+	min-height: 20px;
+	border-color: #999999;
+	background-color: transparent;
+	text-align: center;
+	line-height: 1.4;
+	color: #999999;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 1px;
+}
+
+#u2993:hover #u2996-4
+{
+	border-color: #999999;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2993:active #u2996-4
+{
+	border-color: #999999;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2997
+{
+	z-index: 27;
+	width: 110px;
+	min-height: 20px;
+	border-style: solid;
+	border-color: #999999;
+	background-color: #DEDEDE;
+	padding-bottom: 3px;
+	position: relative;
+	margin-right: -10000px;
+	left: 164px;
+	border-width: 1px 0px 1px 1px;
+}
+
+#u2997:hover
+{
+	border-style: solid;
+	background-color: #FFFFFF;
+	width: 110px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+	border-width: 1px 0px 1px 1px;
+}
+
+#u2997.TabbedPanelsTabSelected
+{
+	border-style: solid;
+	background-color: #FFFFFF;
+	width: 110px;
+	min-height: 21px;
+	margin: 0px -10000px 0px 0px;
+	border-width: 1px 0px 0px 1px;
+}
+
+#u2999-4
+{
+	z-index: 28;
+	width: 110px;
+	min-height: 20px;
+	border-color: #999999;
+	background-color: transparent;
+	text-align: center;
+	line-height: 1.4;
+	color: #999999;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 2px;
+}
+
+#u2997:hover #u2999-4
+{
+	border-color: #999999;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2997:active #u2999-4
+{
+	border-color: #999999;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2989
+{
+	z-index: 32;
+	width: 197px;
+	min-height: 20px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #999999;
+	background-color: #DEDEDE;
+	padding-bottom: 3px;
+	position: relative;
+	margin-right: -10000px;
+	left: 274px;
+}
+
+#u2989:hover
+{
+	border-width: 1px;
+	border-style: solid;
+	background-color: #FFFFFF;
+	width: 197px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2989.TabbedPanelsTabSelected
+{
+	border-style: solid;
+	background-color: #FFFFFF;
+	width: 197px;
+	min-height: 21px;
+	margin: 0px -10000px 0px 0px;
+	border-width: 1px 1px 0px;
+}
+
+#u2990-4
+{
+	z-index: 33;
+	width: 197px;
+	min-height: 20px;
+	border-color: #999999;
+	background-color: transparent;
+	text-align: center;
+	line-height: 1.4;
+	color: #999999;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 1px;
+}
+
+#u2989:hover #u2990-4
+{
+	border-color: #999999;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2989:active #u2990-4
+{
+	border-color: #999999;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2993.TabbedPanelsTabSelected #u2996-4,#u2997.TabbedPanelsTabSelected #u2999-4,#u2989.TabbedPanelsTabSelected #u2990-4
+{
+	border-style: none;
+	border-color: transparent;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 20px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u2993.TabbedPanelsTabSelected #u2996-4 p,#u2997.TabbedPanelsTabSelected #u2999-4 p,#u2989.TabbedPanelsTabSelected #u2990-4 p
+{
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+}
+
+#u3001
+{
+	z-index: 37;
+	width: 505px;
+	position: relative;
+}
+
+#u3010
+{
+	z-index: 38;
+	width: 503px;
+	border-style: solid;
+	border-color: #999999;
+	background-color: #FFFFFF;
+	padding-bottom: 80px;
+	margin-right: -10000px;
+	position: relative;
+	border-width: 0px 1px 1px;
+}
+
+#u3011-10
+{
+	z-index: 39;
+	width: 341px;
+	min-height: 344px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 20px;
+	left: 8px;
+}
+
+#u3011-2
+{
+	font-size: 18px;
+	padding-left: 160px;
+	color: #6B6B6B;
+	font-weight: bold;
+}
+
+#u3011-4
+{
+	line-height: 1.4;
+	padding-left: 160px;
+	color: #999999;
+}
+
+#u3012
+{
+	z-index: 49;
+	width: 155px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 20px;
+	left: 8px;
+}
+
+#u3012_img
+{
+	padding-right: 1px;
+}
+
+#u3002
+{
+	z-index: 51;
+	width: 503px;
+	border-style: solid;
+	border-color: #999999;
+	background-color: #FFFFFF;
+	padding-bottom: 96px;
+	margin-right: -10000px;
+	position: relative;
+	border-width: 0px 1px 1px;
+}
+
+#u3003-8
+{
+	z-index: 52;
+	width: 309px;
+	min-height: 328px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 20px;
+	left: 24px;
+}
+
+#u3003-2
+{
+	font-size: 18px;
+	padding-left: 140px;
+	color: #6B6B6B;
+	font-weight: bold;
+}
+
+#u3003-4
+{
+	line-height: 1.4;
+	padding-left: 140px;
+	color: #999999;
+}
+
+#u3004
+{
+	z-index: 60;
+	width: 132px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 20px;
+	left: 24px;
+}
+
+#u3006
+{
+	z-index: 62;
+	width: 503px;
+	border-style: solid;
+	border-color: #999999;
+	background-color: #FFFFFF;
+	padding-bottom: 133px;
+	margin-right: -10000px;
+	position: relative;
+	border-width: 0px 1px 1px;
+}
+
+#u3007
+{
+	z-index: 69;
+	width: 197px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 21px;
+	left: 17px;
+}
+
+#u3007_clip
+{
+	overflow: hidden;
+	width: 197px;
+	height: 168px;
+}
+
+#u3007_img
+{
+	margin: -110px -61px -70px -3px;
+}
+
+#u3009-6
+{
+	z-index: 63;
+	width: 122px;
+	min-height: 290px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 21px;
+	left: 221px;
+}
+
+#u3009-2
+{
+	font-size: 18px;
+	color: #6B6B6B;
+	font-weight: bold;
+}
+
+#u3011-6,#u3011-8,#u3003-6,#u3009-4
+{
+	line-height: 1.4;
+	color: #999999;
+}
+
+.TabbedPanelsTab /* tabset */
+{
+	cursor: pointer;
+}
+
+#pu2627
+{
+	width: 0.01px;
+	margin-top: 40px;
+	position: relative;
+}
+
+#u2627
+{
+	z-index: 10;
+	width: 380px;
+	margin-right: -10000px;
+}
+
+#u2627_clip
+{
+	width: 380px;
+	height: 150px;
+}
+
+#u2627_img
+{
+	margin-top: -4px;
+	margin-right: 1px;
+}
+
+#u2629
+{
+	z-index: 12;
+	width: 48px;
+	margin-right: -10000px;
+	left: 314px;
+}
+
+#u2631
+{
+	z-index: 14;
+	width: 48px;
+	margin-right: -10000px;
+	left: 94px;
+}
+
+#u2633
+{
+	z-index: 16;
+	width: 48px;
+	margin-right: -10000px;
+	left: 249px;
+}
+
+#u2635
+{
+	z-index: 18;
+	width: 48px;
+	margin-right: -10000px;
+	left: 25px;
 }
 
 #page .verticalspacer
