--- a/phone/css/time-lapse--mckinney-makes-media.css
+++ b/phone/css/time-lapse--mckinney-makes-media.css
@@ -25,16 +25,224 @@
 
 html
 {
-	background-color: #7F7F7F;
+	background: #7F7F7F url("../../images/mmm-website-assets-bg.png") repeat-y center center scroll;
 }
 
 #page
 {
 	z-index: 1;
-	width: 0px;
-	min-height: 0px;
-	padding-right: 380px;
-	padding-bottom: 570px;
+	width: 380px;
+	min-height: 569.9984547865556px;
+	padding-bottom: 0px;
+}
+
+#pu2619
+{
+	width: 0.01px;
+	position: relative;
+}
+
+#u2619
+{
+	z-index: 2;
+	width: 380px;
+	margin-right: -10000px;
+}
+
+#u2621
+{
+	z-index: 4;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 82px;
+}
+
+#u2621:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2621:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2622
+{
+	z-index: 5;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 140px;
+}
+
+#u2621.MuseLinkActive,#u2622:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2622:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2623
+{
+	z-index: 6;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 198px;
+}
+
+#u2622.MuseLinkActive,#u2623:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2623:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2624
+{
+	z-index: 7;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 257px;
+}
+
+#u2623.MuseLinkActive,#u2624:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2624:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2625
+{
+	z-index: 8;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 315px;
+}
+
+#u2624.MuseLinkActive,#u2625:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2625:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2626
+{
+	z-index: 9;
+	width: 39px;
+	height: 40px;
+	margin-right: -10000px;
+	margin-top: 47px;
+	left: 24px;
+}
+
+#u2625.MuseLinkActive,#u2626:hover
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2626:active
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2626.MuseLinkActive
+{
+	margin: 47px -10000px 0px 0px;
+}
+
+#u2985
+{
+	z-index: 20;
+	width: 380px;
+	min-height: 254px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	position: relative;
+	margin-top: 34px;
+}
+
+#pu2627
+{
+	width: 0.01px;
+	margin-top: 45px;
+	position: relative;
+}
+
+#u2627
+{
+	z-index: 10;
+	width: 380px;
+	margin-right: -10000px;
+}
+
+#u2627_clip
+{
+	width: 380px;
+	height: 150px;
+}
+
+#u2627_img
+{
+	margin-top: -4px;
+	margin-right: 1px;
+}
+
+#u2629
+{
+	z-index: 12;
+	width: 48px;
+	margin-right: -10000px;
+	left: 314px;
+}
+
+#u2631
+{
+	z-index: 14;
+	width: 48px;
+	margin-right: -10000px;
+	left: 94px;
+}
+
+#u2633
+{
+	z-index: 16;
+	width: 48px;
+	margin-right: -10000px;
+	left: 249px;
+}
+
+#u2635
+{
+	z-index: 18;
+	width: 48px;
+	margin-right: -10000px;
+	left: 25px;
 }
 
 #page .verticalspacer
